--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  #flutter_localizations:
+    #sdk: flutter
   flutter:
     sdk: flutter
 
@@ -27,8 +29,8 @@ dependencies:
   font_awesome_flutter: ^8.4.0
   flutter_calendar_carousel: ^1.3.15+4
   expandable: ^2.0.0
-  #google_maps_flutter: ^0.3.0+3
-  google_maps_flutter: 0.3.0+1
+  #google_maps_flutter: 0.3.0+1
+  google_maps_flutter: ^0.5.13
   geocoder: ^0.1.2
   #location: ^2.1.0
   location: 2.3.2
@@ -37,6 +39,8 @@ dependencies:
   async_loader: 0.1.2
   http: ^0.12.0+1
   queries: ^0.1.12
+
+  flutter_progress_hud: ^1.0.1
 
   #Guy
   dio: ^1.0.0     #ใส่ค้นหา
